@startuml CP476_Database_Schema

!define table(x) class x << (T,#FFAAAA) >>
!define primary_key(x) <u>x</u>
!define foreign_key(x) <i>x</i>

' Styling
skinparam class {
    BackgroundColor White
    ArrowColor #333333
    BorderColor #666666
}

' Users Table
table(users) {
    primary_key(id) : INT AUTO_INCREMENT
    username : VARCHAR(50) UNIQUE
    password_hash : VARCHAR(255)
    email : VARCHAR(100)
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
}

' Supplier Table
table(supplier) {
    primary_key(supplier_id) : INT
    supplier_name : VARCHAR(100)
    address : VARCHAR(255)
    phone : VARCHAR(20)
    email : VARCHAR(100)
}

' Product Table
table(product) {
    primary_key(product_id) : INT
    product_name : VARCHAR(100)
    description : TEXT
}

' Inventory Table (formerly product_supplier)
table(InventoryTable) {
    foreign_key(product_id) : INT
    foreign_key(supplier_id) : INT
    price : DECIMAL(10,2)
    quantity : INT DEFAULT 0
    status : CHAR(1)
    --
    primary_key(product_id, supplier_id)
}

' Relationships
InventoryTable ||--o{ product : "references"
InventoryTable ||--o{ supplier : "references"

' Notes
note right of users : User authentication and management
note right of supplier : Supplier information
note right of product : Product catalog
note right of InventoryTable : Product-supplier relationships with pricing and inventory

@enduml 